[package]
name = "numcraft-website"
version = "0.1.0"
authors = ["yannis"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.0", features = [] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
fastnoise-lite = "1.1.1"
gloo-timers = "0.3.0"
libm = "0.2.15"
lz4_flex = "0.11.5"
nalgebra = "0.34.1"
postcard = {version = "1.1.3", features = ["alloc"]}
serde = "1.0.228"
wasm-bindgen = "0.2.104"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
